WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195375
[JSC] AI should not propagate AbstractValue relying on constant folding phase
https://bugs.webkit.org/show_bug.cgi?id=195375
Summary
[JSC] AI should not propagate AbstractValue relying on constant folding phase
Yusuke Suzuki
Reported
2019-03-06 13:49:03 PST
[JSC] AI should not propagate AbstractValue relying on constant folding phase
Attachments
Patch
(3.95 KB, patch)
2019-03-06 13:56 PST
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-03-06 13:49:56 PST
<
rdar://problem/48630230
>
Yusuke Suzuki
Comment 2
2019-03-06 13:56:48 PST
Created
attachment 363789
[details]
Patch
Yusuke Suzuki
Comment 3
2019-03-06 14:34:36 PST
Committed
r242568
: <
https://trac.webkit.org/changeset/242568
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug